cmake_minimum_required(VERSION 3.14)
project(LeetCode_Problems)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(2_AddTwoNumbers)
add_subdirectory(3_Longest_Substring)
# add_subdirectory(5_Longest_Palindromic_Substring)
# add_subdirectory(6_Zigzag_Conversion)
# add_subdirectory(7_Reverse_Integer)
# add_subdirectory(8_Atoi)
# add_subdirectory(12_Integer_to_Roman)
# add_subdirectory(13_Tiplete_Sum)
# add_subdirectory(38_Count_and_Say)
# add_subdirectory(219_Contains_Duplicate_II)
# add_subdirectory(692_Top_K_Frequent_Words)
# add_subdirectory(1239_MaxLenght)
# add_subdirectory(1662_CheckTwoStringArrays)
# add_subdirectory(1689_Partitioning_Minimum_Deci_Binary)
# add_subdirectory(1832_Sentence_Pangram)
